2000-01-05  Miguel de Icaza  <miguel@gnu.org>

	* shell/Makefile.am: New file.

	* configure.in (EXTRA_GNOME_CFLAGS_THREADS,
	EXTRA_GNOME_LIBS_THREADS): New variables that hold the thread
	version of the compile/link lines.

1999-11-20  Miguel de Icaza  <miguel@gnu.org>

	* configure.in (PACKAGE): Raise warning level.

2000-01-04  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/mbox/camel-mbox-folder.c (_list_subfolders): 
	in the io_error label does not return before the 
	list has been freed.

2000-01-03  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/mbox/camel-mbox-folder.c (_list_subfolders): 
	detects netscape ".sdb" folders as well as simple 
	non-suffixed folders (as the ones used in pine).
	

	* camel/string-utils.c (string_prefix): 
	finished implementation. 
	(string_prefix): added a boolean flag to indicate if the 
	suffix has been found. When the suffix does not match, 
	return NULL.

1999-12-26 bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-exception.c (camel_exception_setv): 
	new function. Allow printf-like description
	string constructions. 

	* camel/camel-exception.h: cosmetic changes.

        * camel/providers/mbox/camel-mbox-store.h:
        * camel/providers/mbox/camel-mbox-store.c:
        * camel/providers/mbox/camel-mbox-folder.h:
        * camel/providers/mbox/camel-mbox-folder.c:
        More work on the mbox provider.


1999-12-22  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/mbox/camel-mbox-store.h: 
	* camel/providers/mbox/camel-mbox-store.c: 
	* camel/providers/mbox/camel-mbox-folder.h: 
	* camel/providers/mbox/camel-mbox-folder.c: 
	part of the mbox provider.

1999-12-20  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-folder.c (_set_name): 
	check that the folder is closed or raise an exception.
	(_set_name): unset the name fields as soon as possible, 
	even if an exception is raised.

	* configure.in:
	build mbox provider Makefile
	
	* camel/Makefile.am (SUBDIRS): 