@@ -1,3 +1,7 @@
+2000-01-06 Elliot Lee <sopwith@redhat.com>
+	* composer/Makefile.am, widgets/e-table/Makefile.am: Work with
+	builddir != srcdir
+
 2000-01-05  Miguel de Icaza  <miguel@gnu.org>
 
 	* shell/Makefile.am: New file.
